[project]
name = "nomatter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "nafnix", email = "uwu@nafnix.com" }
]
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "fastapi>=0.115.12",
    "ruff>=0.11.7",
]
